Fix another painting regression caused by my patch to address painting problems with the fullscreen window 1 px reduction.

We are setting the size of the compositor as that returned by the DesktopWindowTreeHostWin::GetBounds call. That function
returns the window size offset by the window expansion and window enlargement rectangles, which is not the correct size.

Fix is to pass the bounds size as returned by the HWNDMessageHandler.

BUG=597244

Review URL: https://codereview.chromium.org/1828833002

Cr-Commit-Position: refs/heads/master@{#382934}

Former-commit-id: 5a941ea1cd19d6a92d197e16ab4508652ff139d0